changed background pic

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -158,7 +158,7 @@ hr.small {
   width: 100%;
   height: 100%;
   color: white;
-  background: url(../img/city.jpg) no-repeat center center scroll;
+  background: url(../img/bg-computer.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
